moving script to separate file

--- a/app.html
+++ b/app.html
@@ -11,24 +11,8 @@
     <input type="textfield"/>
     <input type="saveButton"> Save! </input>
     
-
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
-    <script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyCIFMrfhGbcib6dl_qlvJ24DVsGxrKYirI",
-        authDomain: "quickstart-web-5ef5f.firebaseapp.com",
-        databaseURL: "https://quickstart-web-5ef5f.firebaseio.com",
-        projectId: "quickstart-web-5ef5f",
-        storageBucket: "quickstart-web-5ef5f.appspot.com",
-        messagingSenderId: "573053998886"
-    };
-    firebase.initializeApp(config);
-
-    var h1 = document.getElementById('hotdogstatus');
-    var dbRef = firebase.database().ref().child('text');
-    dbRef.on('value', snap => hotdogstatus.innerText = snap.val());
-    </script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
