--- a/app.html
+++ b/app.html
@@ -2,15 +2,14 @@
 
 <head>
     <title> Hot dogs === sandwiches? </title>
-<!-- <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>-->
-<!-- <script src="./app.js"></script> -->
 </head>
 
 <body>
-    <h1 id="hotdogstatus"> Hot dog status: </h1>
-    <input type="textfield"/>
-    <input type="saveButton"> Save! </input>
-    
+    <h1 id="hotdogStatus"> Hot dog status: </h1>
+    <input type="textfield" id="newStatus"/>
+    <button id="saveButton"> Save! </button>
+
+    <!-- <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>-->
     <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
     <script src="./app.js"></script>
 </body>
