--- a/app.html
+++ b/app.html
@@ -5,13 +5,18 @@
 </head>
 
 <body>
-    <h1 id="hotdogStatus"> Hot dog status: </h1>
+
+    <h1 id="dbText"> </h1>
+    <h1 id="hotdogStatus"> </h1>
     <input type="textfield" id="newStatus"/>
     <button id="saveButton"> Save! </button>
+    
+    <!-- <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script> -->
+    <!-- <script src="./firebase.js"></script> -->
 
-    <!-- <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>-->
-    <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
-    <script src="./app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-firestore.js"></script>
+    <script src="./firestore.js"></script>
 </body>
 
 </html>
