--- a/app.html
+++ b/app.html
@@ -9,7 +9,8 @@
     <h1 id="dbText"> </h1>
     <h1 id="hotdogStatus"> </h1>
     <input type="textfield" id="newStatus"/>
-    <button id="saveButton"> Save! </button>
+    <button id="saveButton"> Save </button>
+    <button id="loadButton"> Load </button>
     
     <!-- <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script> -->
     <!-- <script src="./firebase.js"></script> -->
