--- a/app.html
+++ b/app.html
@@ -12,7 +12,7 @@
     <button id="saveButton"> Save </button>
     <button id="loadButton"> Load </button>
 
-    <div class="chart"> <p /> <p /> </div>
+    <div class="chart"></div>
     
     <!-- <script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script> -->
     <!-- <script src="./firebase.js"></script> -->
